fix: added word-wrap: break-word to fix scaling issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -92,6 +92,7 @@ main {
   width: 100%;
   align-items: center;
   font-size: 1.2rem;
+  word-wrap: break-word;
 }
 section {
   width: 100%;
